# mavpdl1

./: .gitignore  README.md  pyproject.toml  setup.py
scripts/: classifier_inference.py  inference.py  ner_inference.py  train.py  train_classifier_only.py  train_hptuning.py  train_ner_only.py  train_ner_only_hptuning.py  train_ner_optunasearchcv.py
scripts/config/: train_config.py
src/mavpdl1/data_examination/: data_munging.py
src/mavpdl1/model/: classification_model.py  ner_model.py
src/mavpdl1/preprocessing/: data_preprocessing.py
src/mavpdl1/utils/: preprocess.py  utils.py
test/: README.md  examine_data.py  test_datain.py  test_multilabel_preprocessing.py  test_tokenize.py
